--- a/notebooks/Gaussian_d128.ipynb
+++ b/notebooks/Gaussian_d128.ipynb
@@ -18,7 +18,7 @@
     "import os  # before importing anything jax\n",
     "\n",
     "# os.environ['XLA_PYTHON_CLIENT_PREALLOCATE'] = \"false\"\n",
-    "os.environ['CUDA_VISIBLE_DEVICES']='5'\n",
+    "# os.environ['CUDA_VISIBLE_DEVICES']='5'\n",
     "\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
@@ -49,10 +49,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def symmetrize(M):\n",
-    "    \"\"\"Symmetrizes a matrix.\"\"\"\n",
-    "    return np.real((M + M.T) / 2)\n",
-    "\n",
     "def sqrtm_jax(matrix, eps=1e-12):\n",
     "    eigvals, eigvecs = jnp.linalg.eigh(matrix)\n",
     "    sqrt_eigvals = jnp.sqrt(jnp.clip(eigvals, eps))\n",
