--- a/notebooks/data_aggregation_bike_posterior_nb.ipynb
+++ b/notebooks/data_aggregation_bike_posterior_nb.ipynb
@@ -19,7 +19,7 @@
     "import os  # before importing anything jax\n",
     "\n",
     "# os.environ['XLA_PYTHON_CLIENT_PREALLOCATE'] = \"false\"\n",
-    "os.environ['CUDA_VISIBLE_DEVICES']='5'\n",
+    "# os.environ['CUDA_VISIBLE_DEVICES']='5'\n",
     "\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
