--- a/notebooks/mnist_246.ipynb
+++ b/notebooks/mnist_246.ipynb
@@ -4,11 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TreeDSBM\n",
-    "\n",
-    "IMF method for barycentres (not the flow-based method)\n",
-    "\n",
-    "applied on MNIST"
+    "# MNIST 2s, 4s, 6s\n",
+    "- applied on MNIST 2s, 4s, 6s, digits example from Nobel et al, (2023)."
    ]
   },
   {
@@ -20,7 +17,7 @@
     "import os  # before importing anything jax\n",
     "\n",
     "# os.environ['XLA_PYTHON_CLIENT_PREALLOCATE'] = \"false\"\n",
-    "os.environ['CUDA_VISIBLE_DEVICES']='6'\n",
+    "# os.environ['CUDA_VISIBLE_DEVICES']='6'\n",
     "\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
