--- a/notebooks/2d3datasets.ipynb
+++ b/notebooks/2d3datasets.ipynb
@@ -17,7 +17,7 @@
     "import os  # before importing anything jax\n",
     "\n",
     "# os.environ['XLA_PYTHON_CLIENT_PREALLOCATE'] = \"false\"\n",
-    "os.environ['CUDA_VISIBLE_DEVICES']='4'\n",
+    "# os.environ['CUDA_VISIBLE_DEVICES']='4'\n",
     "\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
